<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_margin="30px">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="20dp"
            android:background="#92FFA2EB"
            android:textColor="#000"
            android:text="CALCULO DE DATOS" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:textSize="17dp"
            android:background="#770DE4E4"
            android:textColor="#000"
            android:text="@string/DatoUno"/>

        <EditText
            android:id="@+id/Dato1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginTop="10dp"
            android:textSize="13dp"
            android:textColor="#FF000000"
            android:hint="Ingrese un número entero"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:textSize="17dp"
            android:background="#770DE4E4"
            android:textColor="#000"
            android:text="@string/DatoDos"/>

        <EditText
            android:id="@+id/Dato2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginTop="10dp"
            android:textSize="13dp"
            android:textColor="#000"
            android:hint="Ingrese un número entero"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Result"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:textSize="17dp"
            android:textColor="#FF3700B3"
            android:text="@string/Resultado"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">

        <Button
            android:id="@+id/Calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#770DE4E4"
            android:gravity="center"
            android:layout_margin="25px"
            android:text="@string/CalcularDatos" />

        <Button
            android:id="@+id/google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#770DE4E4"
            android:gravity="center"
            android:layout_margin="25px"
            android:text="@string/abrir_google" />


    </LinearLayout>

    <Button
        android:id="@+id/llamar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#770DE4E4"
        android:gravity="center"
        android:text="@string/llamar" />


</LinearLayout>

